tests/ui/undefined.gopp
package main
func main() {
    println(nope) //~ ERROR undefined: nope
    nopefn() //~ ERROR undefined function: nopefn
}
